# GraphDTI

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
deploy/: Dockerfile  README.md  inference.py  sagemaker_deploy.py  serve
experiments/: ABL1_canonical.fasta  AMPK_alpha2_canonical.fasta  BCAT1_canonical.fasta  BCAT2_canonical.fasta  BCKDHA_canonical.fasta  BCKDK_canonical.fasta  BRAF_V600E.fasta  BRAF_canonical.fasta  DBT_canonical.fasta  DLD_canonical.fasta  EGFR_canonical.fasta  EGFR_kinase.fasta  SIRT1_canonical.fasta  bcaa_metabolites_library.csv  bcaa_pathway_results.csv  compound_library.csv  fda_approved_library.csv  fetch_ampk_sirt1.py  fetch_bcaa_pathway.py  fetch_canonical_kinases.py  kinase_audit_report.md  mTOR_canonical.fasta  metformin_AMPK_library.csv  metformin_AMPK_results.csv  natural_products_library.csv  run_bcaa_pathway_screen.py  run_bckdk_repurposing_screen.py  run_metformin_AMPK_screen.py  run_natural_products_screen.py  run_repurposing_screen.py
scripts/: app_ui.py  evaluate.py  explain.py  generate_synthetic.py  pretrain.py  screen.py  serve.py  train.py
src/graphdti/: __init__.py  config.py
src/graphdti/data/: __init__.py  bindingdb.py  dataset.py  featurize.py  synthetic.py
src/graphdti/interpret/: __init__.py  shap_graph.py
src/graphdti/models/: __init__.py  dti.py  gin.py  protein.py  readout.py
src/graphdti/serving/: __init__.py  app.py  schemas.py
tests/: conftest.py  test_api.py  test_featurize.py  test_model.py  test_pipeline.py  test_synthetic.py
(+3 files in other folders)
