[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphdti"
version = "0.1.0"
description = "Geometric deep learning for drug-target interaction prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GraphDTI authors" }]
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "rdkit>=2023.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "shap>=0.44",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]
deploy = ["boto3>=1.34", "sagemaker>=2.220"]

[project.scripts]
graphdti-train = "graphdti.training.train:main"
graphdti-pretrain = "graphdti.training.pretrain:main"
graphdti-evaluate = "graphdti.training.evaluate:main"
graphdti-serve = "graphdti.serving.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
